--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,6 @@
 .nav {
-  /* background-color: transparent; */
+  background-color: transparent;
+  color: white;
   /* height: 13vh; */
   padding-top: 2%;
   padding-bottom: 2%;
@@ -9,11 +10,19 @@
   padding-left: 2%;
   position: fixed;
   width: 100vw;
-  background: url("./bgImage.jpg");
+  /* background: url("./bgImage.jpg"); */
   background-size: cover;
   background-image: 100% 100%;
   background-position: center center;
   /* padding-right: 2%; */
+}
+
+.nav.scrolled {
+  box-shadow: rgba(152, 86, 255, 0.32) 0px 1px 2px -2px,
+    rgba(85, 160, 255, 0.24) 0px 3px 6px 0px,
+    rgba(153, 83, 255, 0.18) 0px 5px 12px 4px;
+
+  background-color: #061c4b;
 }
 
 .nav ul {
