--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,6 +14,7 @@
   background-size: cover;
   background-image: 100% 100%;
   background-position: center center;
+  z-index: 100;
   /* padding-right: 2%; */
 }
 
