--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -1,8 +1,11 @@
 .dashboard_main{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    background-color: #25293C;
+    gap: 2%;
+    padding-right: 2%;
+    /* align-items: center;
+    justify-content: center; */
+    /* height: 100vh; */
 }
 
 .dashboard_child1{
@@ -29,4 +32,31 @@
     height: 85vh;
     /* margin-top: 4%; */
     border-radius: 10px;
+}
+
+
+
+
+
+
+.dashboard_right{
+    flex: 1;
+    height: 100vh;
+    background-color: #25293C;
+    padding-top: 1%;
+    display: flex;
+    flex-direction: column;
+    gap: 2%;
+}
+
+.dashboard_navbar{
+    background-color: #2F3248;
+    height: 7vh;
+    border-radius: 8px;
+}
+
+.dashboard_right_second{
+    background-color: #2F3248;
+    flex: 1;
+    border-radius: 8px;
 }
