--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -1,35 +1,17 @@
 .asideChild1-3 {
-  /* margin-inline-end: -0.85rem; */
   font-size: 1.25rem;
   cursor: pointer;
   color: white;
-  /* block-size: 1em;
-  inline-size: 1em; */
+
 }
 
-.testMainChild.sidebarOpen {
-  /* Apply styles when sidebarOpen is true */
-  /* Example: increase the width of the sidebar */
-  width: 250px;
-}
 
 .asideChild1-3_active {
-  /* Apply styles when active class is present */
-  /* Example: change the color of the active element */
   display: none;
 }
 
-.dashboard {
-  background-color: #25293C;
-  height: 100vh;
-  width: 100vw;
-}
-
-.dashboard_drawer {
-  background-color: "#2F3349";
-}
-
 .drawer_header {
+  transition-duration: 400ms;
   display: block;
 }
 
@@ -37,46 +19,32 @@
   display: none;
 }
 
-.test {
-  color: red;
-}
-
-.dash_sidebar_text {
-  color: rgb(255, 255, 255);
-}
-
-/* .sidebar_cell{
-  background-color: blue;
-} */
-
-
-
-
 /* ------------------------------------------sidebar----------------------------------------------------- */
 
+
 .dashboard_sidebar_open {
-  width: 17vw;
+  width: 20vw;
   height: 100vh;
   transition-duration: 400ms;
-  background-color: #2F3248;
+  background-color: #121632;
   color: white;
 }
 
 .dashboard_sidebar_close {
-  width: 4vw;
+  width: 5vw;
   height: 100vh;
   transition-duration: 400ms;
-  background-color: #2F3248;
+  background-color: #121632;
   color: white;
 }
 
 .sidebar_header {
+  
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 7% 4% 0 6%;
+  padding: 6% 4% 6% 6%;
   margin-bottom: 10%;
-  background-color: #2F3349;
+  background-color: #121632;
   color: white;
-
 }
