--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -23,7 +23,7 @@
 
 
 .dashboard_sidebar_open {
-  width: 20vw;
+  width: 18vw;
   height: 100vh;
   transition-duration: 400ms;
   background-color: #121632;
@@ -47,4 +47,31 @@
   margin-bottom: 10%;
   background-color: #121632;
   color: white;
+}
+
+.sidebar_dashboard{
+  width:90%;
+  display:flex;
+  padding-left: 7%;
+  align-items: center;
+  gap:5%;
+  border-radius: 15px;
+  /* justify-content: center; */
+}
+.sidebar_dashboard:hover{
+  background-color: rgba(170, 62, 255, 1);
+  opacity: 20%;
+}
+.sidebar_analytics{
+  display:flex;
+  padding-left: 7%;
+  align-items: center;
+  gap:5%;
+  width:90%;
+  margin-top: 4%;
+  border-radius: 15px;
+}
+.sidebar_analytics::selection{
+  background-color: rgba(170, 62, 255, 1);
+  opacity: 20%;
 }
