--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -1,7 +1,8 @@
 .asideChild1-3 {
   font-size: 1.25rem;
   cursor: pointer;
-  color: white;
+  /* color: white; */
+  color: var(--text-color);
 
 }
 
@@ -26,16 +27,20 @@
   width: 18vw;
   height: 100vh;
   transition-duration: 400ms;
-  background-color: #121632;
-  color: white;
+  /* background-color: #121632; */
+  background-color: var(--background-color);
+  color: var(--text-color);
+  /* color: white; */
 }
 
 .dashboard_sidebar_close {
   width: 5vw;
   height: 100vh;
   transition-duration: 400ms;
-  background-color: #121632;
-  color: white;
+  color: var(--text-color);
+  background-color: var(--background-color);
+  /* background-color: #121632; */
+  /* color: white; */
 }
 
 .sidebar_header {
@@ -45,8 +50,8 @@
   justify-content: space-between;
   padding: 6% 4% 6% 6%;
   margin-bottom: 10%;
-  background-color: #121632;
-  color: white;
+  /* background-color: #121632; */
+  /* color: white; */
 }
 
 .sidebar_dashboard{
