--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -19,25 +19,6 @@
     gap: 2%;
 }
 
-.dashboard_child1_1{
-    width: 80vw;
-    height: 7vh;
-    background-color: #2F3248;
-    border-radius: 10px;
-}
-
-.dashboard_child1_2{
-    background-color: #2F3248;
-    width: 80vw;
-    height: 85vh;
-    /* margin-top: 4%; */
-    border-radius: 10px;
-}
-
-
-
-
-
 
 .dashboard_right{
     flex: 1;
@@ -51,13 +32,18 @@
 }
 
 .dashboard_navbar{
-    background-color: #121632;
+    /* background-color: #121632; */
+    background-color: var(--background-color);
+    color: var(--text-color);
     height: 7vh;
     border-radius: 8px;
 }
 
 .dashboard_right_second{
-    background-color: #2F3248;
+    /* background-color: #2F3248; */
+    background-color: var(--background-color);
+    color: var(--text-color);
     flex: 1;
     border-radius: 8px;
 }
+
