Graph + QOD implemented

--- a/src/pages/DashboardPage.css
+++ b/src/pages/DashboardPage.css
@@ -67,11 +67,6 @@
     color:white;
     display: flex;
     padding: 3%;
-    /* font-size: 0.7rem; */
-    /* gap:10%; */
-    /* justify-content: center; */
-    /* flex: 0.5; */
-    /* grid-column: span 1; */
 }
 
 
@@ -118,19 +113,51 @@
 
 
 
+.dashboard_QOD_heading{
+    color: #3FFFFF;
+}
 
 
 
 
 
 .dashboard_graph{
-    background-color: #512B81;
+    background-color: rgba(101,118,134,0.2);
+    display: flex;
+    flex-direction: column;
     /* grid-column: span 1; */
 }
+
+.dashboard_graph_chart{
+    /* max-height: 40%; */
+}
+
+
+
+
+
+
 .dashboard_QOD{
-    background-color: #4477CE;
-    /* grid-column: span 1; */
+    /* background-color: rgba(6, 57, 686, 0.2); */
+    background-color: rgba(101,118,134,0.2);
+
+    padding: 6%;
+   
 }
+.dashboard_QOD_heading{
+    color: #3FFFFF;
+}
+.dashboard_QOD_quote{
+    margin-top: 8%;
+}
+
+
+
+
+
+
+
+
 .dashboard_main_part{
     grid-column: span 3;
     background-color: #8CABFF;
