--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -85,6 +85,23 @@
   padding: 0% 5% 2% 5%;
 }
 
+.sidebar_dashboard_close{
+  padding: 0% 5% 2% 5%;
+  display: flex;
+  flex-direction: column;
+  /* height: 20vh; */
+  gap: 0.5rem;
+}
+
+.sidebar_dashboard_child_open_selected {
+  /* width:90%; */
+  display: flex;
+  padding: 4% 2%;
+  align-items: center;
+  gap: 5%;
+  border-radius: 8px;
+  background-color: rgba(170, 62, 255, 0.4);
+}
 .sidebar_dashboard_child_open {
   /* width:90%; */
   display: flex;
@@ -105,7 +122,8 @@
 }
 
 .sidebar_dashboard_child_open:hover {
-  background-color: rgba(170, 62, 255, 0.4);
+  /* background-color: rgba(170, 62, 255, 0.4); */
+  background-color: grey;
   /* background-color: red; */
   color: white;
   /* opacity: 20%; */
@@ -132,7 +150,8 @@
 }
 
 .sidebar_analytics_child_open:hover {
-  background-color: rgba(170, 62, 255, 0.4);
+  /* background-color: rgba(170, 62, 255, 0.4); */
+  background-color: grey;
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -210,9 +229,9 @@
   /* width:90%; */
   display: flex;
   padding: 4% 2%;
-  padding-top: 120%;
+  padding-top: 50%;
   align-items: center;
-  gap: 5%;
+  /* gap: 5%; */
   border-radius: 8px;
   justify-content: center;
 }
@@ -245,6 +264,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
 }
 
 .profile_setting_wrapper {
@@ -258,6 +278,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
 }
 
 
@@ -281,9 +302,9 @@
   margin-bottom: 2%;
 }
 
-.dashboard_hr_1{
-  /* padding-bottom: 20%; */
-}
+/* .dashboard_hr_1{
+  padding-bottom: 20%;
+} */
 
 
 /* .apps_and_pages_invoice_wrapper_calender{
