--- a/src/components/dashboard/Dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard/Dashboard.css
@@ -1,79 +1,74 @@
-.dashboard_right_second {
+
+.dashboard_right_second{
     font-family: 'Public Sans', sans-serif;
     /* background-color: #2F3248;  */
     /* background-color: var(--background-color); */
     background: transparent;
     color: var(--text-color);
-    /* flex: 1; */
-    height: 100vh;
+    /* height: 100vh; */
     display: grid;
     grid-template-columns: 1.5fr 1fr 1fr;
     grid-template-rows: 1fr 1.5fr;
-    gap: 1.2rem;
-    /* border-radius: 8px; */
+    gap:1.2rem;
 }
 
-.dashboard_right_second div {
+
+
+
+
+
+.dashboard_right_second div{
     border-radius: 10px;
 }
-
-.lifetime_data {
-    background-color: rgba(170, 62, 255, 0.2);
-    color: white;
+.lifetime_data{
+    background-color: rgba(170,62,255,0.2);
+    color:white;
     display: flex;
     padding: 3%;
 }
 
 
-.lifetime_data_content {
-    flex: 0.65;
+.lifetime_data_content{
+    flex:0.65;
 }
-
-.lifetime_data_content_heading {
+.lifetime_data_content_heading{
     font-size: 1.2rem;
-    margin: 8% 0 12% 0%;
+    margin:8% 0 12% 0%;
 }
 
-.lifetime_data_content_grid {
+.lifetime_data_content_grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1.4fr;
-    margin-top: 2%;
+    margin-top: 2rem;
     font-size: 0.8rem;
     row-gap: 20%;
 }
-
 .lifetime_data_image {
     flex: 0.45;
     display: flex;
     align-items: center;
-}
 
-.lifetime_data_image img {
+}
+.lifetime_data_image img{
     width: 100%;
 }
-
-.total_invoice {
+.total_invoice{
     display: flex;
-    /* justify-content: center; */
     align-items: center;
 }
-
-.amount_due {
+.amount_due{
     display: flex;
-    /* justify-content: center; */
     align-items: center;
 }
-
-.invoice_due {
+.invoice_due{
     display: flex;
-    /* justify-content: center; */
     align-items: center;
 }
 
 
 
-.dashboard_QOD_heading {
+.dashboard_QOD_heading{
     color: #3FFFFF;
 }
 
@@ -81,40 +76,75 @@
 
 
 
-.dashboard_graph {
-    background-color: rgba(101, 118, 134, 0.2);
+.dashboard_graph{
+    background-color: rgba(101,118,134,0.2);
 }
-
-.dashboard_graph_chart_heading {
+.dashboard_graph_chart_heading{
     padding: 5%;
     display: flex;
     align-items: center;
 }
 
 
-.dashboard_QOD {
-    background-color: rgba(101, 118, 134, 0.2);
+.dashboard_QOD{
+    background-color: rgba(101,118,134,0.2);
     padding: 6%;
     overflow-y: scroll;
-
+   
 }
-
-.dashboard_QOD_heading {
+.dashboard_QOD_heading{
     color: #3FFFFF;
 }
-
-.dashboard_QOD_quote {
+.dashboard_QOD_quote{
     margin-top: 8%;
 }
 
-
-
-
-
-
-
-
-.dashboard_main_part {
+.dashboard_main_part{
     grid-column: span 3;
     background-color: #8CABFF;
 }
+
+
+
+
+
+
+@media screen and (max-width: 949px) {
+ 
+    .lifetime_data{
+        grid-column: span 3;
+    }
+    .lifetime_data_image {
+        flex: 0.45;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+    }
+    .lifetime_data_image img {
+        width: 70%;
+    }
+    .lifetime_data_content_heading{
+        font-size: 1.6rem;
+        margin:2% 0 2% 0%;
+    }
+
+    .lifetime_data_content_grid{
+        margin-top: 1rem;
+        font-size: 1rem;
+        row-gap: 20%;
+    }
+    .dashboard_right_second{
+
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 0.8fr 1fr 2fr;
+        gap:1.2rem;
+    }
+    
+
+
+
+    .dashboard_QOD{
+        grid-column: span 2;
+    }
+  }
