--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -46,6 +46,7 @@
   /* background-color: #121632; */
   background-color: var(--background-color);
   color: var(--text-color);
+  box-shadow: 0 2px 6px rgba(var(--box-shadow),.14),0 0 transparent,0 0 transparent;
   /* color: white; */
 }
 
