--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* background-color: rgb(40, 43, 46); */
 }
 
 ::-webkit-scrollbar {
@@ -10,11 +11,16 @@
 }
 
 :root {
-  --background-color: #121632;
+  --background-color: #1c2034;
+  /* --parent-bg-color: #1c2034; */
+  --parent-bg-color: #121632;
   --text-color: #ffffff;
+  --box-shadow: 40, 43, 46;
 }
 
 .light-mode {
   --background-color: #fafafa;
+  --parent-bg-color: #F4F3F6;
   --text-color: #000000;
+  --box-shadow: 15, 20, 34;
 }
