--- a/src/components/dashboard/Main/Navbar.css
+++ b/src/components/dashboard/Main/Navbar.css
@@ -6,4 +6,8 @@
     border-radius: 8px;
     /* backdrop-filter: blur(6px); */
     box-shadow: 0 2px 6px rgba(var(--box-shadow),.14),0 0 transparent,0 0 transparent;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    padding-right: 2rem;
 }
