Sidebar UI update for hover and select

--- a/src/components/dashboard/Main/Sidebar.css
+++ b/src/components/dashboard/Main/Sidebar.css
@@ -103,7 +103,10 @@
   border-radius: 8px;
   /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: rgba(101,118,134,0.2); */
-  background-color: #7367F0;
+  /* background-color: #7367F0; */
+  background: linear-gradient(72.47deg,rgb(115,103,240) 22.16%,rgba(115,103,240,.7) 76.47%);
+  box-shadow: 0 2px 6px rgba(115,103,240,.48);
+  font-weight: 500;
   color: #ffffff;
 }
 .sidebar_dashboard_child_open {
@@ -127,9 +130,10 @@
 
 .sidebar_dashboard_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
-  background-color: grey;
+  /* background-color: grey; */
+  background-color: #34384E;
   /* background-color: red; */
-  color: white;
+  /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -140,6 +144,21 @@
   padding: 4% 2%;
   gap: 5%;
   border-radius: 8px;
+}
+
+.sidebar_analytics_child_open_selected{
+  display: flex;
+  padding: 4% 2%;
+  align-items: center;
+  gap: 5%;
+  border-radius: 8px;
+  /* background-color: rgba(170, 62, 255, 0.4); */
+  /* background-color: rgba(101,118,134,0.2); */
+  /* background-color: #7367F0; */
+  background: linear-gradient(72.47deg,rgb(115,103,240) 22.16%,rgba(115,103,240,.7) 76.47%);
+  box-shadow: 0 2px 6px rgba(115,103,240,.48);
+  font-weight: 500;
+  color: #ffffff;
 }
 
 .sidebar_analytics_child_close {
@@ -155,7 +174,9 @@
 
 .sidebar_analytics_child_open:hover {
   /* background-color: rgba(170, 62, 255, 0.4); */
-  background-color: grey;
+  /* background-color: grey; */
+  
+  background-color: #34384E;
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -186,9 +207,10 @@
 } */
 
 .sidebar_calender_child_open:hover {
-  background-color: rgba(170, 62, 255, 0.4);
+  /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
-  color: white;
+  background-color: #34384E;
+  /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -223,9 +245,10 @@
 }
 
 .sidebar_invoice_child_open:hover {
-  background-color: rgba(170, 62, 255, 0.4);
+  /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
-  color: white;
+  background-color: #34384E;
+  /* color: white; */
   /* opacity: 20%; */
   cursor: pointer;
 }
@@ -251,9 +274,10 @@
 }
 
 .sidebar_view_profile_child_open:hover {
-  background-color: rgba(170, 62, 255, 0.4);
+  /* background-color: rgba(170, 62, 255, 0.4); */
   /* background-color: red; */
-  color: white;
+  /* color: white; */
+  background-color: #34384E;
   /* opacity: 20%; */
   cursor: pointer;
 }
