--- a/src/components/dashboard/Dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard/Dashboard.css
@@ -8,7 +8,7 @@
     /* height: 100vh; */
     display: grid;
     grid-template-columns: 1.5fr 1fr 1fr;
-    grid-template-rows: 1fr 1.5fr;
+    grid-template-rows:    35vh 52.5vh;
     gap:1.2rem;
 }
 
@@ -98,9 +98,10 @@
 .dashboard_QOD{
     background-color: rgba(101,118,134,0.2);
     padding: 6%;
-    max-height: 13.24875rem;
+    /* max-height: 13.24875rem; */
     /* max-height: 80%; */
     overflow-y: scroll;
+    /* overflow-y: ; */
     /* word-break: break-word; */
     /* display: flex; */
     /* flex-direction: column; */
