Trying to fix QOD

--- a/src/components/dashboard/Dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard/Dashboard.css
@@ -8,8 +8,8 @@
     /* height: 100vh; */
     display: grid;
     grid-template-columns: 1.5fr 1fr 1fr;
-    grid-template-rows:    35vh 52.5vh;
-    /* grid-template-rows: 1fr 1.5fr; */
+    /* grid-template-rows:    34vh 52.5vh; */
+    grid-template-rows: 1fr 1.5fr;
     gap:1.2rem;
 }
 
@@ -102,6 +102,7 @@
     /* max-height: 13.24875rem; */
     /* max-height: 80%; */
     overflow-y: scroll;
+    max-height: 34vh;
     /* overflow-y: ; */
     /* word-break: break-word; */
     /* display: flex; */
