--- a/src/components/dashboard/Dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard/Dashboard.css
@@ -88,6 +88,9 @@
 
 .dashboard_graph{
     background-color: rgba(101,118,134,0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .dashboard_graph_chart_heading{
     padding: 5%;
